[package]
name = "remora-orchestrator"
version = "0.0.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
# AWS crates - from crates.io (exact workspace versions)
aws-sdk-ec2 = "0.29.0"
aws-smithy-http = "0.56"
aws-smithy-runtime-api = "0.56"
aws-config = "0.56"

# SSH crates - from crates.io (exact workspace versions)
russh = "0.38.0"
russh-keys = "0.38.0"

# Other crates.io dependencies (exact workspace versions)
color-eyre = "0.6.2"
eyre = "0.6.8"
crossterm = "0.25.0"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }
prettytable-rs = "0.10.0"
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
serde_yaml = "0.9.21"
serde_with = { version = "2.1.0", features = ["hex"] }
tempfile = "3.0"

prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }

# Sui repo dependencies
mysten-metrics = { git = "https://github.com/Scofield626/sui.git", branch = "dev-pre-sched" }

remora = { path = "../remora" }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "remora-orchestrator"
path = "src/main.rs"
